Fixed misaligned buttons when switching from desktop to mobile view

--- a/Priority_2_Thermodynamics/Flammable_Steel/steel.css
+++ b/Priority_2_Thermodynamics/Flammable_Steel/steel.css
@@ -217,6 +217,10 @@ input[type=range]::-webkit-slider-thumb {
     margin-top: 3px;
   }
 
+  #switchBtn {
+    width: 100%;
+  }
+
   #helpBtn {
     margin-right: 3px;
   }
